--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -90,3 +90,12 @@ footer ul li {
     border-top: 1px solid #eaeaea;
     margin-top: 15px;
 }
+
+.article-title {
+    
+}
+
+.listing {
+    list-style:none;
+    padding-left: 0;
+}
