--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,9 @@
         <%= gravatar_for @user, size: 150 %>
     </div>
 </div>
-<h4 align="center"><%= @user.username %>'s articles</h4>
+<h4 align="center">
+    <%= @user.username %>'s articles
+</h4>
 <div class="center">
     <%= will_paginate @user_articles %>
 </div>
