--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -25,8 +25,6 @@
                             </div>
                         </div>
                         <% end %>
-                        <div class="col-xs-4 col-xs-offset-4">
-                            [ <%=link_to "Cancel request and return home", articles_path %> ]
-                        </div>
+                        <%= render 'shared/cancel' %>
                 </div>
             </div>
