--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -33,8 +33,6 @@
                             </div>
                         </div>
                         <% end %>
-                        <div class="col-xs-4 col-xs-offset-4">
-                            [ <%= link_to "Cancel request and return home", articles_path %> ]
-                        </div>
+                        <%= render 'shared/cancel' %>
                 </div>
             </div>
