--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -7,13 +7,16 @@
             </div>
             <div class="article-body">
                 <%= truncate(article.description, length: 100) %>
+                </div>
                 <div class="article-meta-details">
+                <% if article.categories.any? %>
+                    <small>Categories: <%= render article.categories %></small><br>
+                <% end %>
                     <small>Created by: <%= article.user.username if article.user %>,
                     <%= time_ago_in_words(article.created_at) %> ago,
                     last updated: <%= time_ago_in_words(article.updated_at) %>
                     </small>
                 </div>
-            </div>
             <% if logged_in? && (current_user == article.user || current_user.admin?) %>
               <div class="article-actions">
                   <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %> 
