--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -6,7 +6,7 @@
             <div class="form-group">
                 <div class="control-label col-sm-2">
                     <%=f.label :title %>
-                        </div>
+                </div>
                             <div class="col-sm-8">
                                 <%=f.text_field :title, class: "form-control", placeholder: "title of article", autofocus: true %>
                             </div>
@@ -17,6 +17,15 @@
                             </div>
                             <div class="col-sm-8">
                                 <%=f.text_area :description, rows: 10, class: "form-control", placeholder: "body of article" %>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-sm-offset-2 col-sm-8">
+                                    <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
+                                    <% cb.label(class: "checkbox-inline input_checkbox") {cb.check_box(class: "checkbox") + cb.text} %>
+                                    <% end %>
+                                </div>
                             </div>
                         </div>
                         <div class="form-group">
