Updated frontpage with Sign Up and Log In buttons. Also added a short description on the About Us page.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,4 @@
-<h1>This is the about page of my blog application.</h1>
-<%= link_to 'Home', root_path %>
+<h1 align="center">About Us</h1>
+<div align="center">
+<p>This web application was created as a part of an exercise to learn Ruby on Rails.</p>
+</div>
