--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,7 @@
 <div class ="center jumbotron">
     <h1>ALPHA BLOG</h1>
+    <p>
+        <%= link_to "Sign Up", signup_path, class: "btn btn-default btn-lg" %>
+        <%= link_to "Log In", login_path, class: "btn btn-default btn-lg" %>
+    </p>
 </div>
